valid notebook after fixing JSON issue

--- a/Summarization.ipynb
+++ b/Summarization.ipynb
@@ -12,6 +12,30 @@
     "language_info": {
       "name": "python"
     },
+    "widgets": {
+      "application/vnd.jupyter.widget-state+json": {
+        "d30ebed8e652469e8bfeca2f26662af1": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "HBoxModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_dom_classes": [],
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "HBoxModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/controls",
+            "_view_module_version": "1.5.0",
+            "_view_name": "HBoxView",
+            "box_style": "",
+            "children": [
+              "IPY_MODEL_044b0b13843e44f8863d4f22f182b44e",
+              "IPY_MODEL_78d8ab3214b345c88e0c59f6c1fac27b",
+              "IPY_MODEL_5c7327fd62a040188c8b8c7800ff6c1f"
+            ],
+            "layout": "IPY_MODEL_de0636be820d4a709c4215b900ece226"
+          }
+        },
         "044b0b13843e44f8863d4f22f182b44e": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
