fix: cleaned notebook without widget metadata

--- a/Summarization.ipynb
+++ b/Summarization.ipynb
@@ -5308,6 +5308,41 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Clean notebook metadata (no widgets or execution junk)\n",
+        "!pip install nbstripout --quiet\n",
+        "!nbstripout --clear-output --keep-counts --extra-keys metadata.widgets \"{your_notebook_name}.ipynb\"\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WWABEWKWqWU9",
+        "outputId": "9439aba5-b3c3-4e5d-9ea2-a2a98e118de8"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "usage: nbstripout [-h]\n",
+            "                  [--dry-run | --install | --uninstall | --is-installed | --status | --version]\n",
+            "                  [--verify] [--keep-count] [--keep-output] [--keep-id]\n",
+            "                  [--extra-keys EXTRA_KEYS]\n",
+            "                  [--keep-metadata-keys KEEP_METADATA_KEYS]\n",
+            "                  [--drop-empty-cells] [--drop-tagged-cells DROP_TAGGED_CELLS]\n",
+            "                  [--strip-init-cells] [--attributes FILEPATH]\n",
+            "                  [--global | --system | --python PATH] [--force]\n",
+            "                  [--max-size SIZE] [--mode {jupyter,zeppelin}] [--textconv]\n",
+            "                  [files ...]\n",
+            "nbstripout: error: unrecognized arguments: --clear-output --keep-counts\n"
+          ]
+        }
+      ]
     }
   ]
 }
